fixed overlapping textbox

--- a/styles.css
+++ b/styles.css
@@ -58,14 +58,16 @@ div.transbox{
   border-bottom-left-radius: 10px;
 }
 div.transbox h2 {
-  margin: 15%;
-  margin-bottom: -100px;
+  display: inline-block;
+  margin: 10%;
+  margin-bottom: -50px;
   font-size: 30px;
   font-weight: bold;
   color:white;
 }
 div.transbox p {
-  margin: 15%;
+  display: inline-block;
+  margin: 10%;
   margin-bottom: 100px;
   font-weight: thin;
   color: white;
@@ -85,7 +87,7 @@ div.transbox p {
     cursor: pointer;
   }
 .button1{
-  margin-left: 15%;
+  margin-left: 10%;
   margin-bottom: 25px;
   background-color: #222222;
   color: white;
